Run nx migrate latest
=> upgrade angular to a version not using vulnerable version of vite

--- a/apps/desktop/project.json
+++ b/apps/desktop/project.json
@@ -196,10 +196,7 @@
       }
     },
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "options": {
-        "lintFilePatterns": ["apps/desktop/src/**/*.ts", "apps/desktop/src/**/*.html"]
-      }
+      "executor": "@nx/eslint:lint"
     },
     "test": {
       "executor": "@nx/jest:jest",
