--- a/apps/manager-v2/project.json
+++ b/apps/manager-v2/project.json
@@ -153,10 +153,7 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["apps/manager-v2/**/*.ts", "apps/manager-v2/**/*.html"]
-      }
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nx/jest:jest",
