--- a/apps/nucliadb-admin/project.json
+++ b/apps/nucliadb-admin/project.json
@@ -176,10 +176,7 @@
       }
     },
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "options": {
-        "lintFilePatterns": ["apps/nucliadb-admin/**/*.ts", "apps/nucliadb-admin/**/*.html"]
-      }
+      "executor": "@nx/eslint:lint"
     },
     "test": {
       "executor": "@nx/jest:jest",
