--- a/libs/search-widget/project.json
+++ b/libs/search-widget/project.json
@@ -5,10 +5,7 @@
   "projectType": "library",
   "targets": {
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "options": {
-        "lintFilePatterns": ["libs/search-widget/**/*.{ts,svelte,spec.ts}"]
-      }
+      "executor": "@nx/eslint:lint"
     },
     "check": {
       "executor": "nx:run-commands",
