--- a/libs/sync/project.json
+++ b/libs/sync/project.json
@@ -15,10 +15,7 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["libs/sync/**/*.ts", "libs/sync/**/*.html"]
-      }
+      "outputs": ["{options.outputFile}"]
     }
   }
 }
