--- a/libs/user/project.json
+++ b/libs/user/project.json
@@ -15,10 +15,7 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["libs/user/**/*.ts", "libs/user/**/*.html"]
-      }
+      "outputs": ["{options.outputFile}"]
     }
   }
 }
